[fixes #4647] reduce padding at bottom of food-tray container to avoid awkward scrollbar breakpoint

--- a/public/css/customizer.styl
+++ b/public/css/customizer.styl
@@ -63,6 +63,9 @@ menu
   }
 }
 
+.well
+  padding-bottom: 0
+
 .well.limited-edition
   padding: 5px
   margin: 25px 0 0
